doc/0.6.1-beta/_sources/installation.txt
Installation
============

Tethne has been extensively tested in a Mac OSX environment. Although this version of 
Tethne has not been tested on Windows, there's no reason in principal
why it shouldn't work. If you do try it on Windows, `let us know how it goes
<https://github.com/diging/tethne/issues?labels=installation&state=open>`_.

Installing Dependencies
-----------------------

With Anaconda (Recommended)
'''''''''''''''''''''''''''
It is highly recommended that you use Tethne with the `Anaconda Python 
<https://store.continuum.io/cshop/anaconda/>`_ stack. Anaconda includes its own Python
build, as well as a large array of scientific and numerical Python libraries.

Once you have downloaded and installed Anaconda, proceed to :ref:`install-tethne`.

Without Anaconda
''''''''''''''''

Python
``````
Tethne requires Python 2.7 (untested in Python 3.x). You can get the latest release from
`Python.org <http://www.python.org>`_.

SciPy/NumPy
```````````
SciPy and NumPy are Python libraries for scientific and numerical computing. For details
on installing the SciPy stack, see `this page <http://www.scipy.org/install.html>`_.

Installing SciPy/NumPy with pip doesn't tend to work very well. To install the SciPy stack
with Macports (from the terminal):

.. code-block:: bash

   $ sudo port install py27-numpy py27-scipy py27-matplotlib py27-ipython +notebook py27-pandas py27-sympy py27-nose
   
This should install SciPy, `NumPy <http://www.numpy.org/>`_, `Matplotlib
<http://matplotlib.org/>`_, `IPython <http://ipython.org/>`_, `Pandas
<http://pandas.pydata.org/>`_, `SymPy <http://sympy.org/en/index.html>`_, and 
`Nose <https://nose.readthedocs.org/en/latest/>`_. Of particular interest for Tethne
are SciPy, NumPy, and Matplotlib. But it doesn't hurt to have the rest.

HDF5
````
For ``PyTables`` to work properly, you will need to download and install HDF5. You can get 
the latest source code and binaries `here
<http://www.hdfgroup.org/HDF5/release/obtain5.html#obtain>`_.

Dependencies
''''''''''''
::

   scipy==0.14.0
   numpy==1.8.1
   networkx==1.8.1
   matplotlib==1.3.1
   tables==3.1.1
   Unidecode==0.04.16
   geopy==0.99
   nltk==2.0.4

.. _install-tethne:

Installing Tethne
-----------------
You can install Tethne and all of its (other) dependencies using ``pip``.

.. code-block:: bash

   $ pip install tethne

If pip can't find a "stable" release (see `this page 
<http://pip.readthedocs.org/en/latest/reference/pip_install.html#pre-release-versions>`_)
then you may get an error that looks like this:

.. code-block:: bash

   Downloading/unpacking tethne

   Could not find a version that satisfies the requirement tethne (from versions: ... )
   Cleaning up...
   No distributions matching the version for tethne
   Storing debug log for failure in ...

In that case, use the ``--pre`` flag:

.. code-block:: bash

   $ pip install tethne --pre
   
You can also download the latest version of Tethne from the `Python Package Index
<https://pypi.python.org/pypi/tethne>`_, or from the `Tethne project site 
<https://github.com/diging/tethne/releases>`_.

Unzip the ``tar.gz`` archive, and then:

.. code-block:: bash

   $ cd /path/to/unzipped/tethne-x.y.z
   $ python setup.py install